--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -1,11 +1,14 @@
-name: Run Script
+name: run script
   
 on:  
   schedule:  
     - cron: '*/5 * * * *'
+  push:
+    branches:
+      - main
   
 jobs:  
-  build:  
+  run:  
     runs-on: ubuntu-latest  
     steps:  
     - name: Checkout code  
