--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -2,7 +2,7 @@ name: run script
   
 on:  
   schedule:  
-    - cron: '*/5 * * * *'
+    - cron: '0 0 */3 * *'
   push:
     branches:
       - main
@@ -10,12 +10,27 @@ on:
 jobs:  
   run:  
     runs-on: ubuntu-latest  
+    env:
+      CRAWLER_GITHUB_TOKEN: ${{ secrets.CRAWLER_GITHUB_TOKEN}}
+      OUTPUT_TARGET: "log.txt"
     steps:  
     - name: Checkout code  
-      uses: actions/checkout@v2  
+      uses: actions/checkout@v3
+
     - name: Set up Python 3.9
       uses: actions/setup-python@v4
       with:
         python-version: "3.9"
+
+    - name: Install dependencies  
+      run: pip install -r requirements.pip 
+
     - name: Run Script
-      run: python3 test.py 
+      run: python3 __init__.py
+
+    - name: Upload results
+      if: always()
+      uses: actions/upload-artifact@master
+      with:
+        name: "result" 
+        path: ${{ env.OUTPUT_TARGET }}
