--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -2,7 +2,7 @@ name: run script
   
 on:  
   schedule:  
-    - cron: '0 0 */3 * *'
+    - cron: '0 0 */3 * *'  # At midnight UTC, every 3 days
   push:
     branches:
       - main
