--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,7 @@ __pycache__/
 
 # generated during crawling
 test_report_e2e.xml
-log.txt
+test_report_e2e.json
+tests.txt
+components.txt
 global_settings.py
